# eos-media

./: .gitignore  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  eos-link-user-dirs  eos-link-user-dirs.in  meson.build
.tx/: config
data/: Makefile.am  endlessos-backgrounds-Haiti.xml  endlessos-dynamic.xml  generate-xml  meson.build
debian/: .gitignore  changelog  control  endless-os-media.install  eos-default-background.install  eos-media.install  install  rules
default_files/: meson.build
default_files/default_images/: LICENSE.tsv  LICENSE.txt
po/: ar.po  bn.po  bn_IN.po  de.po  eos-media.pot  es.po  fil.po  fr.po  hi.po  id.po  mr.po  pt_BR.po  ro.po  th.po  vi.po  zh_CN.po  zh_TW.po
