AC_INIT([eos-media],
        [1.0], [http://www.endlessm.com])

AM_INIT_AUTOMAKE([1.10 tar-ustar no-dist-gzip dist-xz foreign])
AM_MAINTAINER_MODE([enable])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_INSTALL
AC_PROG_MKDIR_P

AC_CONFIG_FILES([
Makefile
data/Makefile
])
AC_OUTPUT
